Fix home services scrollbar

--- a/styles.css
+++ b/styles.css
@@ -865,7 +865,6 @@ body {
     left: 0;
     padding: 1.5vw;
     max-height: 100%;
-    overflow: scroll;
     gap: 0.75rem;
     padding: calc(var(--spacing-x) * 1.5) var(--spacing-x);
     @media(min-width: 31.25em){
@@ -893,6 +892,10 @@ body {
 }
 .services-home-item__body{
     font-size: clamp(17px, 1.25vw, 20px);
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
     @media(min-width: 62.5em){
         font-size: 0.1px;
         line-height: 150%;
